switch to using feedzirra to handle new_entries logic. tweak overflow styles. fix missing feed titles in import

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -105,6 +105,8 @@ li.story.open .story-preview {
   height: 30px;
   line-height: 30px;
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .story-preview div {
